--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,10 +1,11 @@
-body {font-family:Arial;}
+body {font-family:Montserrat;background-color: #0066FF;}
   h2 {margin:5px;}
   input[type=text] {margin:10px}
   input[type=button] {margin:10px}  
-  .container {width: 20%; float:left;clear: right;margin:10px; border-radius: 5px;}
+  .container {width: 20%; float:left;clear: right;margin:10px;border-radius: 5px;border-style: solid;border-color: #ADADAD;}
   .sortable { list-style-type: none; margin:0; padding:2px; min-height:30px; border-radius: 5px;}
-  .sortable li { margin: 3px 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; font-size: 1.4em; height: 18px;}
+  .sortable li { margin: 3px 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; font-size: 1.4em; height: 18px; }
   .sortable li span { position: absolute; margin-left: -1.3em; }
- 
+  
+  .task:hover {transition: all .2s ease-in-out;transform: scale(1.1);}
   .task{background-color:red;border-radius:3px;}
