--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -3,7 +3,7 @@ header{
 	font-size: 30px;
 	text-align:left;
 	height: 140px;
-	border-radius: 5px;
+	border-radius: 10px;
 	position: relative;
 	-moz-box-shadow:    10px 10px 15px 6px #ccc;
 	-webkit-box-shadow: 10px 10px 15px 6px #ccc;
@@ -21,7 +21,7 @@ footer{
 	-moz-box-shadow:    10px 10px 15px 6px #ccc;
 	-webkit-box-shadow: 10px 10px 15px 6px #ccc;
 	box-shadow:         10px 10px 15px 6px #ccc;
-	border-radius: 3px;
+	border-radius: 10px;
 	display: inline-block;
 	position: relative;
   	bottom: 0;
@@ -77,7 +77,7 @@ input{
 	transform: scale(1.1);
 	border: 2px;
 	border-style: solid;
-	border-color: black;
+	border-color: red;
 }
 .task:hover .delete-button{
 	visibility: unset;
@@ -93,8 +93,11 @@ input{
 .task{
 	position: relative;
 	background-color:white;
-	border-radius: 5px;
+	border-radius: 10px;
 	text-align: center;
+	-moz-box-shadow: 	4px 4px 6px 0px rgb(37, 37, 37);
+	-webkit-box-shadow: 4px 4px 6px 0px rgb(37, 37, 37);
+	box-shadow: 		4px 4px 6px 0px rgb(37, 37, 37);
 }
 .task .taskinput{
 	padding: 12px;
@@ -112,13 +115,13 @@ input{
 	float:left;
 	clear: right;
 	margin-left:20px;
-	border-radius: 5px;
+	border-radius: 10px;
 }
 .container-head {
 	position: relative;
 	text-align: center;
 	color: white;
-	border-radius: 5px;
+	border-radius: 10px;
 	margin-bottom: 20px;
 	height: 50px;
 }
@@ -131,15 +134,15 @@ input{
 	max-height: 500px;
 	scroll-behavior: auto;
 	overflow: scroll;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
 }
 .container-foot {
 	height: 50px;
 	scroll-behavior: auto;
 	overflow: scroll;
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 	text-align: center;
 }
 #backlog .left-button{
@@ -161,6 +164,7 @@ input{
 #creation{
 	border: 5px solid red;
 	display:none;
+	height: 130px;
 }
 p#time{
 	float: left;
@@ -171,4 +175,14 @@ p#user{
 	float: right;
 	font-size: 12px;
 	margin: 5px;
+}
+.add-button{
+	float: right;
+    color: white;
+    font-size: 12px;
+    margin-right: 10px;
+    border-style: none;
+    border-radius: 10px;
+    background-color: #0066FF;
+    padding: 5px;
 }
